@@ -1,3 +1,8 @@
+2021.??.??
+  * Fixed all "/" being removed from mediainfo output when given a path without
+    parent directory
+
+
 2021.07.06
   * Added support for ptpimg.me (run "upsies set --fetch-ptpimg-apikey EMAIL
     PASSWORD" or "upsies set imghosts.ptpimg.apikey APIKEY")
